unpackaged/main/default/objects/tspa__Digital_Engagement__c/tspa__Digital_Engagement__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>this will have all the configurations related to Digital Engagement messaging</description>
    <label>VRA-Digital Engagement</label>
</CustomObject>