unpackaged/main/default/objects/tspa__Digital_Engagement__c/fields/tspa__Channel_Type__c.field-meta.xml
<CustomField>
    <fullName>tspa__Channel_Type__c</fullName>
    <label>Channel Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>