unpackaged/main/default/objects/tspa__Digital_Engagement__c/fields/tspa__Data_Type__c.field-meta.xml
<CustomField>
    <fullName>tspa__Data_Type__c</fullName>
    <label>Data Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>