unpackaged/main/default/objects/tspa__Digital_Engagement__c/fields/tspa__is_Selected__c.field-meta.xml
<CustomField>
    <fullName>tspa__is_Selected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is Selected</label>
    <type>Checkbox</type>
</CustomField>